# inq

./: .gitignore  LICENSE  README.md  project-spec.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/inq/: cli.py  config.py  google_auth.py  init_cmd.py  notes.py  registry.py  sandbox.py  server.py  threads.py
src/inq/providers/: __init__.py  _context.py  anthropic.py  base.py  gemini.py  openai.py
src/inq/sources/: __init__.py  base.py  drive.py  local.py
tests/: conftest.py  test_config.py  test_local_source.py  test_notes.py  test_provider_context.py  test_registry.py  test_sandbox.py  test_server.py  test_threads.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: AskBar.tsx  CodeEditor.tsx  FileTree.tsx  MarkdownViewer.tsx  PdfViewer.tsx  ResponsePanel.tsx  SourcePicker.tsx
web/src/lib/: cmLang.ts  cmTheme.ts  markdown.ts  sse.ts  theme.ts  threads.ts
