[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inq-review"
version = "0.1.0"
description = "Terminal-native web UI for AI-assisted code and document review"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vaibhav Singh", email = "singh.vaibhav.83@gmail.com" }]
keywords = ["code-review", "ai", "annotation", "pdf", "claude", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "anthropic>=0.40",
    "google-genai>=0.7",
    "openai>=1.50",
    "pathspec>=0.12",
    "pydantic>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/sutra-lab/inq"
Repository = "https://github.com/sutra-lab/inq"
Issues = "https://github.com/sutra-lab/inq/issues"

[project.scripts]
inq = "inq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inq"]
artifacts = ["src/inq/web/**"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["src/inq/web", "web/node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
  "E501",   # line too long — formatter handles, and many strings are intentional
  "B008",   # function call in default argument — fine for CLI helpers
]

[tool.ruff.format]
quote-style = "double"
